--- a/德州扑克 - 胜率计算器.html
+++ b/德州扑克 - 胜率计算器.html
@@ -82,7 +82,9 @@
     <thead>
       <tr>
         <th>玩家</th>
-        <th>胜率 (包括平局)</th>
+        <th>胜率 (平局之情況將平分至各玩家之勝率)<div class="progress-bar">
+  <div class="progress"></div>
+</div></th>
       </tr>
     </thead>
     <tbody id="info"></tbody>
