--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </div>
   <br>
   <div class="quote imp">
-    每次选择两张手牌，点击「手牌」按钮选定，可以添加二至多名玩家。然后选择 0～4 张公共牌。选完后点击计算按钮计算胜率。<b>由于性能问题不能穷举时，电脑会最多选出 10000 种情况，然后根据结果算出胜率，计算结果与真实胜率存在约 1% 以内的误差。</b>点击计算后大概几秒钟后会算出结果，请耐心等候。
+    每次选择两张手牌，点击「手牌」按钮选定，可以添加二至多名玩家。然后选择 0～4 张公共牌。选完后点击计算按钮计算胜率。<b>已修改算法，當結果可能性大於10000時，將會分批計算結果，計算進度可參照進度條。</b>点击计算后大概几秒钟后会算出结果，请耐心等候。
   </div>
   <hr>
   <div class="container">
