--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
   <noscript>你的浏览器不支持 JavaScript，请启用它或使用现代浏览器（如 chrome firefox 等）打开本网站。</noscript>
   <div class="quote">
-    德州扑克全称 Texas Hold'em Poker，中文简称德扑。一共52张牌，没有王牌。开始的时候，每个玩家会有两张面朝下的底牌，然后荷官依次发出三张「翻牌」，一张「转牌」以及一张「河牌」，共五张公共牌。每次发公共牌前以及发完所有公共牌后会有一圈下注的机会，玩家们可以选择check、raise、call或者fold。经过所有押注圈后，若仍剩下两名及以上的玩家，游戏会进入“摊牌”阶段，也就是让所剩的玩家亮出各自的底牌以较高下，持大牌者获胜。
+    德州扑克 計算器
   </div>
   <br>
   <div class="quote imp">
     每次选择两张手牌，点击「手牌」按钮选定，可以添加二至多名玩家。然后选择 0～4 张公共牌。选完后点击计算按钮计算胜率。<b>已修改算法，當結果可能性大於10000時，將會分批計算結果，計算進度可參照進度條。</b>点击计算后大概几秒钟后会算出结果，请耐心等候。
   </div>
+    <br>
+  <h3> 轉牌EV計算</h3>
   <table id="outs">
   <tr>
     <th>反超張數 <label id="counterNum"></label></th>
